header was added with menu

--- a/source/styles/global/var.scss
+++ b/source/styles/global/var.scss
@@ -3,3 +3,5 @@ $ff-main-bold:"NotoSerif-Bold";
 $ff-main-italic:"NotoSerif-Italic";
 $ff-main-bold-italic:"NotoSerif-BoldItalic";
 $ff-step:"georgia-bold";
+$ff-main-bold2: "helvetica-neue-bold";
+$ff-main2: "helvetica-neue-regular";
