--- a/source/templates/index.pug
+++ b/source/templates/index.pug
@@ -7,6 +7,10 @@ html(lang="ru")
     link(rel='stylesheet' href="css/main.min.css")
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
     title("Клининговая компания Лотос")
-    body
-      include sections/header
 
+  body
+
+    include sections/header
+    include sections/menu
+    include sections/hero
+  script(src='js/main.min.js')
