--- a/source/styles/global/base.scss
+++ b/source/styles/global/base.scss
@@ -1,7 +1,14 @@
 html{
   box-sizing: border-box;
 }
+html,body{
 
+  width: 100%;
+  height: 100%;
+}
+.body{
+
+}
 *, *:before, *:after{
   box-sizing: inherit;
 }
@@ -18,3 +25,4 @@ ol{
     clear: both;
   }
 }
+
