--- a/source/styles/global/font.scss
+++ b/source/styles/global/font.scss
@@ -6,7 +6,7 @@
   font-style: normal;
 }
 
-/* @font-face {
+ @font-face {
   font-family: "helvetica-neue-bold";
   src: url("../../fonts/helvetica-neue-bold.woff") format("woff"),
   url("../../fonts/helvetica-neue-bold.woff2") format("woff2");
@@ -28,7 +28,7 @@
   url("../../fonts/helvetica-neue-regular.woff2") format("woff2");
   font-weight: normal;
   font-style: normal;
-} */
+}
 
 @font-face {
   font-family:"NotoSerif-Regular";
