--- a/source/styles/main.scss
+++ b/source/styles/main.scss
@@ -15,3 +15,6 @@
 @import "sections/header";
 @import "sections/footer";
 @import "sections/nav";
+@import "sections/contact";
+@import "sections/hero";
+@import "sections/menu";
