--- a/source/styles/main.scss
+++ b/source/styles/main.scss
@@ -16,5 +16,10 @@
 @import "sections/footer";
 @import "sections/nav";
 @import "sections/contact";
+@import "sections/icons";
+
+
 @import "sections/hero";
 @import "sections/menu";
+@import "sections/slider";
+@import "sections/form";
