--- a/source/templates/sections/header.pug
+++ b/source/templates/sections/header.pug
@@ -9,12 +9,5 @@ header.header
       i.fas.fa-bars.fa-2x(aria-hidden="true")
 
     include nav
-    .icons
-      a.vk-icon(href="https://vk.com/club168294310" target="_bank")
-        i.fab.fa-vk.fa-2x(aria-hidden="true")
-      a.viber-icon(href="#" target="_bank")
-        i.fab.fa-viber.fa-2x(aria-hidden="true")
-      a.facebook-icon(href="#" target="_bank")
-        i.fab.fa-facebook.fa-2x(aria-hidden="true")
+    include icons
 
-  hr
