--- a/source/templates/sections/menu.pug
+++ b/source/templates/sections/menu.pug
@@ -1,27 +1,58 @@
-div.form-container.is-hidden
-  a.btnClose(href="#")
-    i.fas.fa-times.fa-3x(aria-hidden="true")
-  ul.first__menu
-    li
-      a(href="#") Уборка квартир/офисов
-      ul.second__menu
-        li: a(href="#") — генеральная
-        li: a(href="#") — после ремонта
-        li: a(href="#") — после пожара / затопления
-        li: a(href="#") — поддерживающая
-        li: a(href="#") устранение и предотвращение плесени
-    li
-      a(href="#") Химчистка
-      ul.second__menu
-        li: a(href="#") — мебели
-        li: a(href="#") — ковров / ковровых покрытий
-    li: a(href="#") Мойка окон и стеклянных фасадов
-    li: a(href="#") Чистка линолеума
-    li: a(href="#") Уборка территории
-    li: a(href="#") Благоустройсто и озеленение
-    li: a(href="#") Вывоз мусора/снега
-    li: a(href="#") Чистка жалюзи
-    li: a(href="#") Дератизация
-    li: a(href="#") Мелкий ремонт
-    li: a(href="#") Электромонтажные работы
-    li: a(href="#") Сантехнические работы
+div.aside__menu
+  div.first_aside
+    a(href="#")
+      h3.first Уборка квартир/офисов
+      div#second_aside
+        a(href="#")
+          p.second генеральная
+      div#second_aside
+        a(href="#")
+          p.second после ремонта
+      div#second_aside
+        a(href="#")
+          p.second после пожара / затопления
+      div#second_aside
+        a(href="#")
+          p.second поддерживающая
+      div#second_aside
+        a(href="#")
+          p.second устранение и предотвращение плесени
+  div.first_aside
+    a(href="#")
+      h3.first Химчистка
+      div#second_aside
+        a(href="#")
+          p.second мебели
+      div#second_aside
+        a(href="#")
+          p.second ковров / ковровых покрытий
+  div.first_aside
+    a(href="#")
+      h3.first Мойка окон и стеклянных фасадов
+  div.first_aside
+    a(href="#")
+      h3.first Чистка линолеума
+  div.first_aside
+    a(href="#")
+      h3.first Уборка территории
+  div.first_aside
+    a(href="#")
+      h3.first Благоустройсто и озеленение
+  div.first_aside
+    a(href="#")
+      h3.first Вывоз мусора/снега
+  div.first_aside
+    a(href="#")
+      h3.first Чистка жалюзи
+  div.first_aside
+    a(href="#")
+      h3.first Дератизация
+  div.first_aside
+    a(href="#")
+      h3.first Мелкий ремонт
+  div.first_aside
+    a(href="#")
+      h3.first Электромонтажные работы
+  div.first_aside
+    a(href="#")
+      h3.first Сантехнические работы
