--- a/source/styles/global/base.scss
+++ b/source/styles/global/base.scss
@@ -1,14 +1,17 @@
+* {
+  padding: 0;
+  margin: 0;
+}
 html{
   box-sizing: border-box;
+
 }
 html,body{
 
   width: 100%;
   height: 100%;
 }
-.body{
 
-}
 *, *:before, *:after{
   box-sizing: inherit;
 }
