--- a/source/styles/sections/header.scss
+++ b/source/styles/sections/header.scss
@@ -6,14 +6,15 @@
     justify-content: space-between;
     align-items: center;
     height: 100px;
-    background: #fff;
+    background: #FFF;
     padding: 0 10px;
    &__text{
-     margin-right: 120px;
-     font-family: $ff-main;
+     margin-right: 130px;
+     font-family: $ff-main-bold;
      text-align: center;
-     font-size: 2rem;
-     color: #888888;
+     font-size: 2.5rem;
+     color: black;
+     width: auto;
    }
   }
   hr{
@@ -22,14 +23,7 @@
     border: 0;
     box-shadow: inset 0 12px 12px -12px rgba(0,0,0,0.5);
   }
-  .icons{
-    display: inline-block;
-    margin: 0 10px;
-    a{
-      color: #888888;
-      padding: 0 10px;
-    }
-  }
+
 }
 
 .menu {
@@ -38,11 +32,11 @@
   justify-content: space-between;
   align-items: center;
   padding: 0 10px 10px 0;
-  background: linear-gradient(to top, #888888, #fff);
+  background: linear-gradient(to top,#EA779A,#fff);
 
 }
 .btn{
-  display: block;
+  display: none;
   position: relative;
   z-index: 9998;
   margin-left:25px;
