--- a/source/styles/sections/hero.scss
+++ b/source/styles/sections/hero.scss
@@ -1,6 +1,9 @@
 .hero{
-  margin:0;
-  max-width:100%;
-  padding: 0;
+  position: relative;
+  width:100%;
+  height: 800px;
+  background-image: url(../../images/hero.jpg);
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
 
 }
