--- a/source/templates/index.pug
+++ b/source/templates/index.pug
@@ -4,13 +4,12 @@ html(lang="ru")
     meta(charset="utf-8")
     meta(http-equiv='X-UA-Compatible', content="IE=Edge")
     meta(name='viewport' content='width=device-width')
+    link(rel='stylesheet prefetch' href='http://fonts.googleapis.com/css?family=Open+Sans')
     link(rel='stylesheet' href="css/main.min.css")
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
     title("Клининговая компания Лотос")
 
   body
-
     include sections/header
-    include sections/menu
     include sections/hero
   script(src='js/main.min.js')
