--- a/source/templates/sections/contact.pug
+++ b/source/templates/sections/contact.pug
@@ -4,6 +4,6 @@
     span.contact__text +7(981)508-57-80
   hr
   a.contact(href="mailto:service-clean@bk.ru?subject=Вопрос с сайта&body=Здравствуйте, клининговая комапания 'Лотос'.")
-    i.fas.fa-envelope.contact__icon.contact__icon--email(aria-hidden="true")
+    i.fas.fa-envelope.contact__icon.contact__icon__email(aria-hidden="true")
     span.contact__text service-clean@bk.ru
 
