--- a/source/styles/main.scss
+++ b/source/styles/main.scss
@@ -9,6 +9,8 @@
 @import "global/var";
 @import "global/button";
 @import "global/sprite";
+@import "global/icon";
+
 
 
 
@@ -23,3 +25,15 @@
 @import "sections/menu";
 @import "sections/slider";
 @import "sections/form";
+
+@import "sections/ourBest";
+
+@import "sections/about";
+
+@import "sections/actions";
+
+@import "sections/ourService";
+
+@import "sections/ourWorks";
+
+@import "global/mediascreen.scss";
