--- a/source/styles/sections/contact.scss
+++ b/source/styles/sections/contact.scss
@@ -1,6 +1,7 @@
 .contacts {
+  position: absolute;
   padding: 0 10px;
-  margin-right: 10px;
+  left:88%;
   display: flex;
   flex-direction: column;
   width:200px;
