--- a/source/templates/sections/hero.pug
+++ b/source/templates/sections/hero.pug
@@ -2,3 +2,6 @@
  include menu
  include slider
  include form
+ h2.title_text Клининговая компания «ЛОТОС» приветствует Вас на нашем сайте!
+ a.upper(href="#")
+   i.icoUpper
