--- a/source/styles/global/base.scss
+++ b/source/styles/global/base.scss
@@ -4,12 +4,14 @@
 }
 html{
   box-sizing: border-box;
+  overflow-x: hidden;
+
 
 }
 html,body{
 
-  width: 100%;
-  height: 100%;
+  max-width: 100%;
+  height: auto;
 }
 
 *, *:before, *:after{
