--- a/source/styles/sections/form.scss
+++ b/source/styles/sections/form.scss
@@ -2,8 +2,8 @@
   position: absolute;
   margin: 10px 10px 0 0;
   right: 0;
-  width:25%;
-  height: 550px;
+  width:20%;
+  height: auto;
   background: #E5E5E5;
   opacity: 1;
   text-align: center;
@@ -15,7 +15,7 @@
 }
 span.fOut{
   display: block;
-  margin-left: 5%;
+  margin-left: 4%;
   width:90%;
   font-size: 2.5rem;
   padding: 10px 0;
@@ -64,7 +64,12 @@ p.fOut{
   color:white;
   margin: 15px 0 15px 0;
   border-radius: 25px;
+
 }
+#checkBtn:focus{
+  outline: none;
+}
+
 .check{
   display: block;
   position: relative;
