--- a/source/styles/sections/header.scss
+++ b/source/styles/sections/header.scss
@@ -1,5 +1,5 @@
 .header{
-
+  position: relative;
   &__flex{
     display: flex;
     flex-wrap: wrap;
@@ -9,7 +9,8 @@
     background: #FFF;
     padding: 0 10px;
    &__text{
-     margin-right: 130px;
+     @include centerer-x;
+     margin:0;
      font-family: $ff-main-bold;
      text-align: center;
      font-size: 2.5rem;
@@ -27,6 +28,7 @@
 }
 
 .menu {
+  z-index: 9999;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
