--- a/source/styles/sections/hero.scss
+++ b/source/styles/sections/hero.scss
@@ -1,9 +1,25 @@
 .hero{
   position: relative;
   width:100%;
-  height: 800px;
-  background-image: url(../../images/hero.jpg);
+  height: 850px;
+  background-image: url(../images/hero.jpg);
   background-repeat: no-repeat;
   background-size: 100% 100%;
-
+}
+.title_text{
+  @include centerer-x();
+  white-space: nowrap;
+  top:700px;
+  font-family: $ff-main-bold;
+  font-size: 2rem;
+}
+.icoUpper{
+  opacity: 0.6;
+  position: fixed;
+  top:90%;
+  right: 1%;
+  z-index: 9999;
+}
+.icoUpper:hover{
+  opacity: 1;
 }
