--- a/source/styles/sections/nav.scss
+++ b/source/styles/sections/nav.scss
@@ -1,5 +1,6 @@
 .nav{
-  margin: 0 auto;
+  @include centerer-x();
+  margin: 0;
   display: flex;
   align-content: space-around;
   flex-wrap: nowrap;
@@ -12,6 +13,8 @@
     font-size: 1.5rem;
     color: #888888;
     text-decoration: none;
+    white-space: nowrap;
+
 
     &:hover,
     &--active {
