--- a/source/styles/sections/slider.scss
+++ b/source/styles/sections/slider.scss
@@ -1,8 +1,54 @@
 .slider{
-  position: absolute;
+  @include centerer-x();
   top:10px;
-  left:22.5%;
-  width:50%;
-  height: 550px;
-  background: gray;
+  width: 55%;
+  height: 600px;
+  background: black;
+  border: 1px solid black;
+}
+
+
+  /*-webkit-transition: opacity 1s;
+  -moz-transition: opacity 1s;
+  -o-transition: opacity 1s;
+  transition: opacity 1s;*/
+
+#slides{
+  position: relative;
+  height: 100%;
+  list-style-type: none;
+
+}
+.slide{
+  position: absolute;
+  left:0;
+  top:0;
+  width:100%;
+  height: 100%;
+  opacity: 1;
+  z-index: 1;
+
+
+}
+
+.show{
+  opacity: 1;
+  z-index: 2;
+
+}
+.slide:nth-of-type(1){
+  background: url("../images/slides/6.jpg") center/cover no-repeat;
+
+}
+.slide:nth-of-type(2){
+  background: url("../images/slides/2.jpg") center/cover no-repeat;
+}
+.slide:nth-of-type(3){
+  background: url("../images/slides/3.jpg") center/cover no-repeat;
+}
+.slide:nth-of-type(4){
+  background: url("../images/slides/4.jpg") center/cover no-repeat;
+}
+.slide:nth-of-type(5){
+  background: url("../images/slides/5.jpg") center/cover no-repeat;
 }
