--- a/source/templates/index.pug
+++ b/source/templates/index.pug
@@ -2,9 +2,9 @@ doctype html
 html(lang="ru")
   head
     meta(charset="utf-8")
+    meta(name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no")
     meta(http-equiv='X-UA-Compatible', content="IE=Edge")
-    meta(name='viewport' content='width=device-width')
-    link(rel='stylesheet prefetch' href='http://fonts.googleapis.com/css?family=Open+Sans')
+    <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Slab" rel="stylesheet">
     link(rel='stylesheet' href="css/main.min.css")
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
     title("Клининговая компания Лотос")
@@ -12,4 +12,11 @@ html(lang="ru")
   body
     include sections/header
     include sections/hero
+    include sections/ourBest
+    include sections/about
+    include sections/actions
+    include sections/ourService
+    include sections/ourWorks
+    include sections/footer
+
   script(src='js/main.min.js')
